@@ -1,5 +1,9 @@
 2007-01-22  Lluis Sanchez Gual <lluis@novell.com> 
 
+	* libsteticui/WidgetDesigner.cs: Avoid disposing twice the designer.
+
+2007-01-22  Lluis Sanchez Gual <lluis@novell.com> 
+
 	* libsteticui/ApplicationBackend.cs, libsteticui/ProjectBackend.cs,
 	  libsteticui/Application.cs: Fixed problem when updating project
 	  libraries. Make sure referenced libraries are not unloaded when
